# beer-recommender

./: .gitignore  README.md  pyproject.toml
notebooks/: beer_styles.txt  data_exploration.ipynb  kaggle_styles.css
