[tool.poetry]
name = "beer-recommender"
version = "0.1.0"
description = ""
authors = ["Johnathon Hyland <johnathon.hyland@ligo.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
tensorflow = ">=2.13"
ydata-profiling = "^4.8.3"
ipykernel = "^6.29.4"
tensorflow-metal = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
